uplink-hub/kub_manifest/media-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.prod.yaml -o kub_manifest/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: media
  name: media
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5000
  selector:
    io.kompose.service: media
status:
  loadBalancer: {}
