uplink-hub/kub_manifest/uplink-hub-default-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: uplink-hub-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/uplink-hub-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/uplink-hub-default: "true"
